# shadowsocks-rust-realms

./: .gitignore  Cargo.toml  DESIGN.md  HANDOFF.md
.github/workflows/: build-and-test.yml  build-docker-image.yml  build-msrv.yml  build-nightly-release.yml  build-release.yml  clippy-check.yml  deny-check.yml  realm.yml
configs/realm/: client.json5  server.json5
crates/shadowsocks/: Cargo.toml
crates/shadowsocks-realm/: Cargo.toml  README.md
crates/shadowsocks-realm/examples/: natpmp_map.rs  realm_probe.rs
crates/shadowsocks-realm/src/: control.rs  error.rs  lib.rs  path_manager.rs  punch.rs  quic.rs  session.rs  socket.rs  stun.rs  tls.rs  url.rs
crates/shadowsocks-realm/src/portmap/: mod.rs  natpmp.rs  upnp.rs
crates/shadowsocks-realm/src/rendezvous/: client.rs  events.rs  mod.rs  types.rs
crates/shadowsocks-realm/tests/: control_upgrade.rs  portmap_graceful.rs  punch_local.rs  quic_local.rs  rendezvous_mock.rs  stun_mock.rs
crates/shadowsocks-service/: Cargo.toml
crates/shadowsocks-service/src/: config.rs
crates/shadowsocks-service/src/local/loadbalancing/: server_data.rs
crates/shadowsocks-service/src/local/net/tcp/: auto_proxy_stream.rs
crates/shadowsocks-service/src/local/net/udp/: association.rs
crates/shadowsocks-service/src/manager/: server.rs
crates/shadowsocks-service/src/server/: mod.rs
crates/shadowsocks/src/: lib.rs  realm.rs
crates/shadowsocks/src/relay/udprelay/: mod.rs
crates/shadowsocks/tests/: realm_e2e.rs  realm_multiclient.rs  realm_path_b.rs  realm_udp.rs
testing/loss-sim/: run.sh
testing/nat-sim/: README.md  _punchtest.py  hyrlm.py  peer.py  punch_demo.sh  rendezvous.py  stun_server.py  topology.sh
testing/natpmp-sim/: natpmp_gateway.py  run.sh
testing/realm-e2e/: run_binary_e2e.sh
